--- a/src/style.css
+++ b/src/style.css
@@ -33,6 +33,7 @@
     --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
     --color-sidebar-border: var(--sidebar-border);
     --color-sidebar-ring: var(--sidebar-ring);
+    --color-selected: #8b014d;
 
     --font-sans: var(--font-sans);
     --font-mono: var(--font-mono);
@@ -319,6 +320,14 @@
 
     summary:hover {
         color: var(--color-primary);
+    }
+
+    ::selection {
+        background-color: var(--color-selected)
+    }
+
+    a::selection {
+        color: var(--color-accent-foreground)
     }
 
     /* Dividers with text */
